[gd_scene load_steps=28 format=3 uid="uid://cvr3pj2lbmy6p"]

[ext_resource type="Script" path="res://Scene/PlayerBody/player_body.gd" id="1_um44s"]
[ext_resource type="Texture2D" uid="uid://g5iij7jgaguo" path="res://Assets/Art/2D/Role/Doll/AkiIdle.png" id="2_s76o8"]
[ext_resource type="Texture2D" uid="uid://nqmpicgs12p3" path="res://Assets/Art/2D/Role/Doll/AkiMove.png" id="3_3lsdn"]
[ext_resource type="Texture2D" uid="uid://bxi5jddbvyhkv" path="res://Assets/Art/2D/Jumbo/Dark/Spritesheets/E.png" id="4_u8v5h"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fckq0"]
atlas = ExtResource("2_s76o8")
region = Rect2(0, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifpj6"]
atlas = ExtResource("2_s76o8")
region = Rect2(60, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8d3k"]
atlas = ExtResource("2_s76o8")
region = Rect2(120, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_s52qa"]
atlas = ExtResource("2_s76o8")
region = Rect2(180, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_mi5wn"]
atlas = ExtResource("2_s76o8")
region = Rect2(240, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlyhv"]
atlas = ExtResource("2_s76o8")
region = Rect2(300, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_l66ry"]
atlas = ExtResource("2_s76o8")
region = Rect2(360, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_21ebn"]
atlas = ExtResource("2_s76o8")
region = Rect2(420, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhd4x"]
atlas = ExtResource("2_s76o8")
region = Rect2(480, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_0v4ji"]
atlas = ExtResource("2_s76o8")
region = Rect2(540, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqk66"]
atlas = ExtResource("3_3lsdn")
region = Rect2(0, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhxb7"]
atlas = ExtResource("3_3lsdn")
region = Rect2(60, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3283"]
atlas = ExtResource("3_3lsdn")
region = Rect2(120, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_4777d"]
atlas = ExtResource("3_3lsdn")
region = Rect2(180, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnbs2"]
atlas = ExtResource("3_3lsdn")
region = Rect2(240, 0, 60, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5vye"]
atlas = ExtResource("3_3lsdn")
region = Rect2(300, 0, 60, 60)

[sub_resource type="SpriteFrames" id="SpriteFrames_xbnwi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fckq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifpj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8d3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s52qa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mi5wn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlyhv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l66ry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_21ebn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhd4x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0v4ji")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqk66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhxb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3283")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4777d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnbs2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5vye")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_t3er2"]
radius = 0.0797176
height = 0.5

[sub_resource type="BoxShape3D" id="BoxShape3D_ev48w"]
size = Vector3(0.75, 0.75, 0.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dsnh"]
atlas = ExtResource("4_u8v5h")
region = Rect2(0, 0, 19, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_dykrg"]
atlas = ExtResource("4_u8v5h")
region = Rect2(19, 0, 19, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvsuc"]
atlas = ExtResource("4_u8v5h")
region = Rect2(38, 0, 19, 21)

[sub_resource type="SpriteFrames" id="SpriteFrames_6tude"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dsnh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dykrg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvsuc")
}],
"loop": true,
"name": &"key E",
"speed": 4.0
}]

[node name="PlayerBody" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_um44s")

[node name="PlayerBodySprite" type="AnimatedSprite3D" parent="."]
offset = Vector2(0, 30)
shaded = true
alpha_cut = 2
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_xbnwi")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.92768

[node name="PlayerBodyCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
shape = SubResource("CapsuleShape3D_t3er2")

[node name="PlayerBodyArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="PlayerBodyAreaCollisionShape" type="CollisionShape3D" parent="PlayerBodyArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
shape = SubResource("BoxShape3D_ev48w")

[node name="KeySprite" type="AnimatedSprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.708449, 0)
visible = false
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_6tude")
animation = &"key E"
frame_progress = 0.66203

[connection signal="area_entered" from="PlayerBodyArea" to="." method="_on_player_body_area_area_entered"]
[connection signal="area_exited" from="PlayerBodyArea" to="." method="_on_player_body_area_area_exited"]
